--- a/FTTBlazor/Components/Dialog/Dialog.razor
+++ b/FTTBlazor/Components/Dialog/Dialog.razor
@@ -1,5 +1,5 @@
-﻿@namespace MatBlazor
-@inherits BaseMatDialog
+﻿@namespace FTTBlazorComponent
+@inherits BaseDialog
 
 <div class="@ClassMapper.AsString()"
      style="@StyleMapper.AsString()"
