--- a/FTTBlazor/Pages/_Host.cshtml
+++ b/FTTBlazor/Pages/_Host.cshtml
@@ -14,7 +14,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="css/matBlazor.css" rel="stylesheet" />
+    <link href="css/fttBlazor.css" rel="stylesheet" />
     <link href="FTTBlazor.styles.css" rel="stylesheet" />
 </head>
 <body>
@@ -32,6 +32,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-    <script src="~/js/matBlazor.js"></script>
+    <script src="~/js/fttBlazor.js"></script>
 </body>
 </html>
