--- a/FTTBlazor/Components/Dialog/DialogContent.razor
+++ b/FTTBlazor/Components/Dialog/DialogContent.razor
@@ -1,9 +1,12 @@
-﻿@namespace MatBlazor
+﻿@namespace FTTBlazorComponent
 @using Microsoft.AspNetCore.Components
-@inherits BaseMatDomComponent
-<h2 class="@ClassMapper.AsString()" style="@StyleMapper.AsString()" @ref="Ref"  @attributes="Attributes" Id="@Id">
+@inherits BaseDomComponent
+
+
+<div class="@ClassMapper.AsString()" style="@StyleMapper.AsString()" @ref="Ref"  @attributes="Attributes" Id="@Id">
     @ChildContent
-</h2>
+</div>
+
 
 @code
 {
@@ -14,7 +17,7 @@
     protected async override Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        ClassMapper.Add("mdc-dialog__title");
+        ClassMapper.Add("mdc-dialog__content");
     }
 
 }
