Alteração de nome

--- a/FTTBlazor/Pages/FetchData.razor
+++ b/FTTBlazor/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 
-@using FTTBlazor.Data
+@using FTTBlazor.Client.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
