--- a/FTTBlazor/Pages/_Host.cshtml
+++ b/FTTBlazor/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace FTTBlazor.Pages
+@namespace FTTBlazor.Client.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
