--- a/FTTBlazor/_Imports.razor
+++ b/FTTBlazor/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using FTTBlazor
-@using FTTBlazor.Shared
+@using FTTBlazor.Client
+@using FTTBlazor.Client.Shared
