--- a/FTTBlazor/Components/Dialog/DialogTitle.razor
+++ b/FTTBlazor/Components/Dialog/DialogTitle.razor
@@ -1,6 +1,7 @@
-﻿@namespace FTTBlazorComponent
+﻿@namespace FTTBlazor
 @using Microsoft.AspNetCore.Components
 @inherits BaseDomComponent
+
 <h2 class="@ClassMapper.AsString()" style="@StyleMapper.AsString()" @ref="Ref"  @attributes="Attributes" Id="@Id">
     @ChildContent
 </h2>
