--- a/FTTBlazor/Pages/Index.razor
+++ b/FTTBlazor/Pages/Index.razor
@@ -1,12 +1,10 @@
 ﻿@page "/"
 
+@*@inject ToastService toastService*@
 
 @code{
     public bool dialogIsOpen { get; set; } = false;
 
-    public void shownotify()
-    {
-    }
 }
 
 <h1>Hello, world!</h1>
@@ -17,14 +15,18 @@ Welcome to your new app.
 
 <button @onclick="@(e => { dialogIsOpen = true; })">oi</button>
 
-<FTTBlazorComponent.Dialog @bind-IsOpen="@dialogIsOpen">
-    <FTTBlazorComponent.DialogTitle>Hi</FTTBlazorComponent.DialogTitle>
-    <FTTBlazorComponent.DialogContent>
+@*<button class="btn btn-info" @onclick="@(() => toastService.ShowToast("Mensagem de INFO", ToastEnum.Info))">Info Toast</button>
+<button class="btn btn-success" @onclick="@(() => toastService.ShowToast("Mensagem de SUCESSO", ToastEnum.Success))">Success Toast</button>
+<button class="btn btn-warning" @onclick="@(() => toastService.ShowToast("Mensagem de ALERTA", ToastEnum.Warning))">Warning Toast</button>
+<button class="btn btn-danger" @onclick="@(() => toastService.ShowToast("Mensagem de ERRO", ToastEnum.Error))">Error Toast</button>*@
+
+<FTTBlazor.Dialog @bind-IsOpen="@dialogIsOpen">
+    <FTTBlazor.DialogTitle>Hi</FTTBlazor.DialogTitle>
+    <FTTBlazor.DialogContent>
         <p>What's your favorite animal?</p>
 
-        <button @onclick="shownotify">oi</button>
-    </FTTBlazorComponent.DialogContent>
-    <FTTBlazorComponent.DialogActions>
+    </FTTBlazor.DialogContent>
+    <FTTBlazor.DialogActions>
 
-    </FTTBlazorComponent.DialogActions>
-</FTTBlazorComponent.Dialog>
+    </FTTBlazor.DialogActions>
+</FTTBlazor.Dialog>
