--- a/FTTBlazor/Pages/_Host.cshtml
+++ b/FTTBlazor/Pages/_Host.cshtml
@@ -13,12 +13,14 @@
     <title>FTTBlazor</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link href="css/site.css" rel="stylesheet" />
-    <link href="css/fttBlazor.css" rel="stylesheet" />
-    <link href="FTTBlazor.styles.css" rel="stylesheet" />
+    @*<link href="css/fttBlazor.css" rel="stylesheet" />*@
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <app>
+        <component type="typeof(App)" render-mode="ServerPrerendered" />
+    </app>
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
