--- a/FTTBlazor/wwwroot/css/site.css
+++ b/FTTBlazor/wwwroot/css/site.css
@@ -14,8 +14,95 @@ a, .btn-link {
     border-color: #1861ac;
 }
 
+app {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.top-row {
+    height: 3.5rem;
+    display: flex;
+    align-items: center;
+}
+
+.main {
+    flex: 1;
+}
+
+    .main .top-row {
+        background-color: #f7f7f7;
+        border-bottom: 1px solid #d6d5d5;
+        justify-content: flex-end;
+    }
+
+        .main .top-row > a, .main .top-row .btn-link {
+            white-space: nowrap;
+            margin-left: 1.5rem;
+        }
+
+        .main .top-row a:first-child {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+.sidebar {
+    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+}
+
+    .sidebar .top-row {
+        background-color: rgba(0,0,0,0.4);
+    }
+
+    .sidebar .navbar-brand {
+        font-size: 1.1rem;
+    }
+
+    .sidebar .oi {
+        width: 2rem;
+        font-size: 1.1rem;
+        vertical-align: text-top;
+        top: -2px;
+    }
+
+    .sidebar .nav-item {
+        font-size: 0.9rem;
+        padding-bottom: 0.5rem;
+    }
+
+        .sidebar .nav-item:first-of-type {
+            padding-top: 1rem;
+        }
+
+        .sidebar .nav-item:last-of-type {
+            padding-bottom: 1rem;
+        }
+
+        .sidebar .nav-item a {
+            color: #d7d7d7;
+            border-radius: 4px;
+            height: 3rem;
+            display: flex;
+            align-items: center;
+            line-height: 3rem;
+        }
+
+            .sidebar .nav-item a.active {
+                background-color: rgba(255,255,255,0.25);
+                color: white;
+            }
+
+            .sidebar .nav-item a:hover {
+                background-color: rgba(255,255,255,0.1);
+                color: white;
+            }
+
 .content {
     padding-top: 1.1rem;
+}
+
+.navbar-toggler {
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .valid.modified:not([type=checkbox]) {
@@ -48,3 +135,389 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+/*@media (max-width: 767.98px) {
+    .main .top-row:not(.auth) {
+        display: none;
+    }
+
+    .main .top-row.auth {
+        justify-content: space-between;
+    }
+
+    .main .top-row a, .main .top-row .btn-link {
+        margin-left: 0;
+    }
+}
+
+@media (min-width: 768px) {
+    app {
+        flex-direction: row;
+    }
+
+    .sidebar {
+        width: 250px;
+        height: 100vh;
+        position: sticky;
+        top: 0;
+    }
+
+    .main .top-row {
+        position: sticky;
+        top: 0;
+    }
+
+    .main > div {
+        padding-left: 2rem !important;
+        padding-right: 1.5rem !important;
+    }
+
+    .navbar-toggler {
+        display: none;
+    }
+
+    .sidebar .collapse {*/
+        /* Never collapse the sidebar for wide screens */
+        /*display: block;
+    }*/
+
+    /* ----------------------*/
+    /*toast notification css */
+    /* ----------------------*/
+    /*.toast {
+        display: none;
+        padding: 1.5rem;
+        color: #fff;
+        z-index: 1;
+        position: absolute;
+        width: 25rem;
+        top: 2rem;
+        border-radius: 1rem;
+        left: 50%;
+    }
+
+    .toast-icon {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 1rem;
+        font-size: 2.5rem;
+    }
+
+    .toast-body {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        padding-left: 1rem;
+    }
+
+        .toast-body p {
+            margin-bottom: 0;
+        }
+
+    .toast-visible {
+        display: flex;
+        flex-direction: row;
+        animation: fadein 1.5s;
+        animation-fill-mode: forwards;
+    }
+
+    @keyframes fadein {
+        from {
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
+        }
+    }
+}*/
+
+/*CSS DO DIALOG*/
+/*@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500);
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+
+.mdc-dialog, .mdc-dialog__scrim {
+    position: fixed;
+    top: 0;
+    left: 0;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%
+}
+
+.mdc-dialog {
+    display: none;
+    z-index: 7
+}
+
+    .mdc-dialog .mdc-dialog__surface {
+        background-color: #fff;
+        background-color: var(--mdc-theme-surface, #fff)
+    }
+
+    .mdc-dialog .mdc-dialog__scrim {
+        background-color: rgba(0,0,0,.32)
+    }
+
+    .mdc-dialog .mdc-dialog__title {
+        color: rgba(0,0,0,.87)
+    }
+
+    .mdc-dialog .mdc-dialog__content {
+        color: rgba(0,0,0,.6)
+    }
+
+    .mdc-dialog.mdc-dialog--scrollable .mdc-dialog__title, .mdc-dialog.mdc-dialog--scrollable .mdc-dialog__actions {
+        border-color: rgba(0,0,0,.12)
+    }
+
+    .mdc-dialog .mdc-dialog__content {
+        padding: 20px 24px 20px 24px
+    }
+
+    .mdc-dialog .mdc-dialog__surface {
+        min-width: 280px
+    }
+
+@media(max-width: 592px) {
+    .mdc-dialog .mdc-dialog__surface {
+        max-width: calc(100vw - 32px)
+    }
+}
+
+@media(min-width: 592px) {
+    .mdc-dialog .mdc-dialog__surface {
+        max-width: 560px
+    }
+}
+
+.mdc-dialog .mdc-dialog__surface {
+    max-height: calc(100% - 32px)
+}
+
+.mdc-dialog .mdc-dialog__surface {
+    border-radius: 4px;
+    border-radius: var(--mdc-shape-medium, 4px)
+}
+
+.mdc-dialog__scrim {
+    opacity: 0;
+    z-index: -1
+}
+
+.mdc-dialog__container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    box-sizing: border-box;
+    height: 100%;
+    transform: scale(0.8);
+    opacity: 0;
+    pointer-events: none
+}
+
+.mdc-dialog__surface {
+    position: relative;
+    box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0,0,0,.12);
+    display: flex;
+    flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+    box-sizing: border-box;
+    max-width: 100%;
+    max-height: 100%;
+    pointer-events: auto;
+    overflow-y: auto
+}
+
+    .mdc-dialog__surface
+    .mdc-elevation-overlay {
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0
+    }
+
+.mdc-dialog[dir=rtl] .mdc-dialog__surface, [dir=rtl] .mdc-dialog .mdc-dialog__surface {
+    text-align: right
+}
+
+.mdc-dialog__title {
+    display: block;
+    margin-top: 0;
+    line-height: normal;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-family: Roboto, sans-serif;
+    font-family: var(--mdc-typography-headline6-font-family, var(--mdc-typography-font-family, Roboto, sans-serif));
+    font-size: 1.25rem;
+    font-size: var(--mdc-typography-headline6-font-size, 1.25rem);
+    line-height: 2rem;
+    line-height: var(--mdc-typography-headline6-line-height, 2rem);
+    font-weight: 500;
+    font-weight: var(--mdc-typography-headline6-font-weight, 500);
+    letter-spacing: 0.0125em;
+    letter-spacing: var(--mdc-typography-headline6-letter-spacing, 0.0125em);
+    text-decoration: inherit;
+    text-decoration: var(--mdc-typography-headline6-text-decoration, inherit);
+    text-transform: inherit;
+    text-transform: var(--mdc-typography-headline6-text-transform, inherit);
+    position: relative;
+    flex-shrink: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0 24px 9px;
+    border-bottom: 1px solid transparent
+}
+
+    .mdc-dialog__title::before {
+        display: inline-block;
+        width: 0;
+        height: 40px;
+        content: "";
+        vertical-align: 0
+    }
+
+.mdc-dialog[dir=rtl] .mdc-dialog__title, [dir=rtl] .mdc-dialog .mdc-dialog__title {
+    text-align: right
+}
+
+.mdc-dialog--scrollable .mdc-dialog__title {
+    padding-bottom: 15px
+}
+
+.mdc-dialog__content {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-family: Roboto, sans-serif;
+    font-family: var(--mdc-typography-body1-font-family, var(--mdc-typography-font-family, Roboto, sans-serif));
+    font-size: 1rem;
+    font-size: var(--mdc-typography-body1-font-size, 1rem);
+    line-height: 1.5rem;
+    line-height: var(--mdc-typography-body1-line-height, 1.5rem);
+    font-weight: 400;
+    font-weight: var(--mdc-typography-body1-font-weight, 400);
+    letter-spacing: 0.03125em;
+    letter-spacing: var(--mdc-typography-body1-letter-spacing, 0.03125em);
+    text-decoration: inherit;
+    text-decoration: var(--mdc-typography-body1-text-decoration, inherit);
+    text-transform: inherit;
+    text-transform: var(--mdc-typography-body1-text-transform, inherit);
+    flex-grow: 1;
+    box-sizing: border-box;
+    margin: 0;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch
+}
+
+    .mdc-dialog__content > :first-child {
+        margin-top: 0
+    }
+
+    .mdc-dialog__content > :last-child {
+        margin-bottom: 0
+    }
+
+.mdc-dialog__title + .mdc-dialog__content {
+    padding-top: 0
+}
+
+.mdc-dialog--scrollable .mdc-dialog__title + .mdc-dialog__content {
+    padding-top: 8px;
+    padding-bottom: 8px
+}
+
+.mdc-dialog__content .mdc-list:first-child:last-child {
+    padding: 6px 0 0
+}
+
+.mdc-dialog--scrollable .mdc-dialog__content .mdc-list:first-child:last-child {
+    padding: 0
+}
+
+.mdc-dialog__actions {
+    display: flex;
+    position: relative;
+    flex-shrink: 0;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+    box-sizing: border-box;
+    min-height: 52px;
+    margin: 0;
+    padding: 8px;
+    border-top: 1px solid transparent
+}
+
+.mdc-dialog--stacked .mdc-dialog__actions {
+    flex-direction: column;
+    align-items: flex-end
+}
+
+.mdc-dialog__button {
+    margin-left: 8px;
+    margin-right: 0;
+    max-width: 100%;
+    text-align: right
+}
+
+    [dir=rtl] .mdc-dialog__button, .mdc-dialog__button[dir=rtl] {
+        margin-left: 0;
+        margin-right: 8px
+    }
+
+    .mdc-dialog__button:first-child {
+        margin-left: 0;
+        margin-right: 0
+    }
+
+        [dir=rtl] .mdc-dialog__button:first-child, .mdc-dialog__button:first-child[dir=rtl] {
+            margin-left: 0;
+            margin-right: 0
+        }
+
+.mdc-dialog[dir=rtl] .mdc-dialog__button, [dir=rtl] .mdc-dialog .mdc-dialog__button {
+    text-align: left
+}
+
+.mdc-dialog--stacked .mdc-dialog__button:not(:first-child) {
+    margin-top: 12px
+}
+
+.mdc-dialog--open, .mdc-dialog--opening, .mdc-dialog--closing {
+    display: flex
+}
+
+    .mdc-dialog--opening .mdc-dialog__scrim {
+        transition: opacity 150ms linear
+    }
+
+    .mdc-dialog--opening .mdc-dialog__container {
+        transition: opacity 75ms linear,transform 150ms 0ms cubic-bezier(0, 0, 0.2, 1)
+    }
+
+    .mdc-dialog--closing .mdc-dialog__scrim, .mdc-dialog--closing .mdc-dialog__container {
+        transition: opacity 75ms linear
+    }
+
+    .mdc-dialog--closing .mdc-dialog__container {
+        transform: none
+    }
+
+    .mdc-dialog--open .mdc-dialog__scrim {
+        opacity: 1
+    }
+
+    .mdc-dialog--open .mdc-dialog__container {
+        transform: none;
+        opacity: 1
+    }
+
+.mdc-dialog-scroll-lock {
+    overflow: hidden
+}
+*/
