--- a/FTTBlazor/Shared/MainLayout.razor
+++ b/FTTBlazor/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-    @*<FTTBlazor.Client.Components.Toast.Toast />*@
+    <FTTBlazor.Client.Components.Toast.Toast />
 
     <div class="page">
         <div class="sidebar">
