--- a/FTTBlazor/wwwroot/css/fttBlazor.css
+++ b/FTTBlazor/wwwroot/css/fttBlazor.css
@@ -313,3 +313,52 @@
 .mdc-dialog-scroll-lock {
     overflow: hidden
 }
+
+/*CSS Toast*/
+    .toast {
+        display: none;
+        padding: 1.5rem;
+        color: #fff;
+        z-index: 1;
+        position: absolute;
+        width: 25rem;
+        top: 2rem;
+        border-radius: 1rem;
+        left: 50%;
+    }
+
+    .toast-icon {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 1rem;
+        font-size: 2.5rem;
+    }
+
+    .toast-body {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        padding-left: 1rem;
+    }
+
+        .toast-body p {
+            margin-bottom: 0;
+        }
+
+    .toast-visible {
+        display: flex;
+        flex-direction: row;
+        animation: fadein 1.5s;
+        animation-fill-mode: forwards;
+    }
+
+    @keyframes fadein {
+        from {
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
+        }
+    }
