Correção no css

--- a/FTTBlazor/Components/Dialog/DialogActions.razor
+++ b/FTTBlazor/Components/Dialog/DialogActions.razor
@@ -16,7 +16,7 @@
     protected async override Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        ClassMapper.Add("mdc-dialog__actions");
+        ClassMapper.Add("ftt-blazor-dialog__actions");
     }
 
 }
