--- a/FTTBlazor/Components/Dialog/DialogContent.razor
+++ b/FTTBlazor/Components/Dialog/DialogContent.razor
@@ -17,7 +17,7 @@
     protected async override Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        ClassMapper.Add("mdc-dialog__content");
+        ClassMapper.Add("ftt-blazor-dialog__content");
     }
 
 }
