--- a/FTTBlazor/Components/Dialog/DialogTitle.razor
+++ b/FTTBlazor/Components/Dialog/DialogTitle.razor
@@ -15,7 +15,7 @@
     protected async override Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        ClassMapper.Add("mdc-dialog__title");
+        ClassMapper.Add("ftt-blazor-dialog__title");
     }
 
 }
