--- a/FTTBlazor/Components/Dialog/Dialog.razor
+++ b/FTTBlazor/Components/Dialog/Dialog.razor
@@ -9,12 +9,12 @@
      Id="@Id"
      role="alertdialog"
      aria-modal="true"
-     aria-labelledby="my-dialog-title"
-     aria-describedby="my-dialog-content">
-    <div class="mdc-dialog__container">
+     aria-labelledby="ftt-blazor-dialog-title"
+     aria-describedby="ftt-blazor-dialog-content">
+    <div class="ftt-blazor-dialog__container">
         <div class="@SurfaceClassMapper.AsString()" style="@SurfaceStyleMapper.AsString()">
             @ChildContent
         </div>
     </div>
-    <div class="mdc-dialog__scrim"></div>
+    <div class="ftt-blazor-dialog__scrim"></div>
 </div>
