removendo coisas inuteis

--- a/FTTBlazor/Pages/_Host.cshtml
+++ b/FTTBlazor/Pages/_Host.cshtml
@@ -12,7 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FTTBlazor</title>
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="~/css/material/material-components-web.min.css" rel="stylesheet">
+    <script src="~/js/material/material-components-web.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link href="css/site.css" rel="stylesheet" />
     <link href="css/fttBlazor.css" rel="stylesheet" />
