Reomvendo coisas do JS

--- a/FTTBlazor/Pages/Index.razor
+++ b/FTTBlazor/Pages/Index.razor
@@ -25,6 +25,6 @@ Welcome to your new app.
 
     </FTTBlazor.DialogContent>
     <FTTBlazor.DialogActions>
-
+        <button>ola</button>
     </FTTBlazor.DialogActions>
 </FTTBlazor.Dialog>
