--- a/FTTBlazor/Pages/Index.razor
+++ b/FTTBlazor/Pages/Index.razor
@@ -7,9 +7,7 @@
 
 }
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<h1>FTT Blazor</h1>
 
 <button @onclick="@(e => { dialogIsOpen = true; })">oi</button>
 
