--- a/FTTBlazor/Pages/_Host.cshtml
+++ b/FTTBlazor/Pages/_Host.cshtml
@@ -12,28 +12,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FTTBlazor</title>
     <base href="~/" />
-    <link href="~/css/material/material-components-web.min.css" rel="stylesheet">
-    <script src="~/js/material/material-components-web.min.js"></script>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link href="css/site.css" rel="stylesheet" />
-    <link href="css/fttBlazor.css" rel="stylesheet" />
+
+    <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/css/fttBlazor.css" rel="stylesheet" />
+    <link href="~/css/material/material-components-web.min.css" rel="stylesheet">
 </head>
 <body>
     <app>
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
-
-    <div id="blazor-error-ui">
-        <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
-        </environment>
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
 
     <script src="_framework/blazor.server.js"></script>
     <script src="~/js/fttBlazor.js"></script>
