--- a/FTTBlazor/Shared/MainLayout.razor
+++ b/FTTBlazor/Shared/MainLayout.razor
@@ -1,10 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
 <FTTBlazor.Client.Components.Toast.Toast />
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
-    <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
-        <header class="demo-drawer-header">
-            <div class="demo-avatar-dropdown">
+<div class="layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+    <div class="drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
+        <header class="drawer-header">
+            <div class="avatar-dropdown">
 
             </div>
         </header>
@@ -12,8 +12,8 @@
     </div>
 
     <main class="mdl-layout__content mdl-color--grey-100">
-        <div class="mdl-grid demo-content">
-            <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+        <div class="mdl-grid content">
+            <div class="charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
                 @Body
             </div>
         </div>
