--- a/FTTBlazor/Shared/NavMenu.razor
+++ b/FTTBlazor/Shared/NavMenu.razor
@@ -9,7 +9,13 @@
     }
 }
 
-<NavLink class="demo-navigation mdl-navigation mdl-color--blue-grey-800" href="" Match="NavLinkMatch.All">
+<NavLink class="navigation mdl-navigation mdl-color--blue-grey-800" href="" Match="NavLinkMatch.All">
+    <a class="mdl-navigation__link" href="">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
+            home
+        </i>
+        Home
+    </a>
     <a class="mdl-navigation__link" href="">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
             home
