--- a/FTTBlazor/App.razor
+++ b/FTTBlazor/App.razor
@@ -4,7 +4,7 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <p>Você não deveria estar aqui...</p>
         </LayoutView>
     </NotFound>
 </Router>
