--- a/FTTBlazor/Shared/NavMenu.razor
+++ b/FTTBlazor/Shared/NavMenu.razor
@@ -16,10 +16,10 @@
         </i>
         Home
     </a>
-    <a class="mdl-navigation__link" href="">
+    <a class="mdl-navigation__link" href="dialog">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
-            home
+            auto_awesome_motion
         </i>
-        Home
+        dialog
     </a>
 </NavLink>
