--- a/FTTBlazor/Shared/MainLayout.razor
+++ b/FTTBlazor/Shared/MainLayout.razor
@@ -3,12 +3,8 @@
 <FTTBlazor.Client.Components.Toast.Toast />
 
 <div class="layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
-    <div class="drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
-        <header class="drawer-header">
-            <div class="avatar-dropdown">
-
-            </div>
-        </header>
+    <div class="drawer mdl-layout__drawer">
+        <img src="../img/ftt.png" class="img-center" style="width: 90%"/>
         <NavMenu />
     </div>
 
