Subindo primeiros abouts

--- a/FTTBlazor/Shared/NavMenu.razor
+++ b/FTTBlazor/Shared/NavMenu.razor
@@ -20,6 +20,12 @@
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
             auto_awesome_motion
         </i>
-        dialog
+        Dialog
+    </a>
+    <a class="mdl-navigation__link" href="toaster">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
+            notification_important
+        </i>
+        Toaster
     </a>
 </NavLink>
