--- a/FTTBlazor/Pages/About/Dialog.razor
+++ b/FTTBlazor/Pages/About/Dialog.razor
@@ -1,42 +1,29 @@
 ﻿@page "/dialog"
 
 @code{
-  
+    bool dialogIsOpen { get; set; }
 }
 
 <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid" style="margin-top: -8px;">
     <img style="width: 30%;" src="../img/logoMicrosoft.png" />
-    <h1 style="text-align: right;">FTT Blazor</h1>
+    <h1 style="text-align: right;">FTT Blazor - Dialog</h1>
 </div>
-
-<div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
-    <p>Nosso projeto tem o intuito apresentar a solução da Microsoft para o WebAssembly chamada Blazor!</p>
-    <p>
-        Alem disso temos a proposta de agilizar o desenvolvimento com Blazor casando o pardão REST e
-        componentes criado por nós para desenvolvimento WEB usando o MaterialDesign como base.
-    </p>
-</div>
-
 <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
     <div class="mdl-cell mdl-cell--12-col mdl-grid">
-        <h2>Membros</h2>
+        <h1>Sobre o componenete de Dialog</h1>
     </div>
-
-    <div class="mdl-cell mdl-cell--6-col mdl-grid align-center">
-        <img src="../img/jho.png" class="img-center" />
-        <p class="text-center">Responsável pelo Angular, 082170016</p>
-    </div>
-    <div class="mdl-cell mdl-cell--6-col mdl-grid align-center">
-        <img src="../img/paulo.png" class="img-center" />
-        <p class="text-center">Responsável pelo teórica, 082170024</p>
-    </div>
-    <div class="mdl-cell mdl-cell--6-col mdl-grid align-center">
-        <img src="../img/thiago.png" class="img-center" />
-        <p class="text-center">Responsável pela gerencia, 082170029</p>
-    </div>
-    <div class="mdl-cell mdl-cell--6-col mdl-grid align-center">
-        <img src="../img/luiz.png" class="img-center" />
-        <p class="text-center">Responsável pelo Blazor, 082170039</p>
+    <div class="mdl-cell mdl-cell--12-col mdl-grid">
+        <button class="mdc-button" @onclick="@(e => { dialogIsOpen = true; })">ABRIR O DIALOG</button>
     </div>
 </div>
 
+
+<FTTBlazor.Dialog @bind-IsOpen="@dialogIsOpen">
+    <FTTBlazor.DialogTitle>Hi</FTTBlazor.DialogTitle>
+    <FTTBlazor.DialogContent>
+        <p>What's your favorite animal?</p>
+    </FTTBlazor.DialogContent>
+    <FTTBlazor.DialogActions>
+        <button class="mdc-button" @onclick="@(e => { dialogIsOpen = false; })"> FECHAR </button>
+    </FTTBlazor.DialogActions>
+</FTTBlazor.Dialog>
